Changelog
=========

3.2 - Unreleased
----------------

- Fixed Forbidden error when attempting to login for the first time as a newly
  created user, if the must_change_password property has been added (as a
  Boolean) to the portal_memberdata tool and set to True.
  Closes https://dev.plone.org/plone/ticket/8425
  [hexsprite]

- Fixed the toc.js to not turn heading text containing an "@" into the link.
  Closes http://dev.plone.org/plone/ticket/7949
  [sbruno, calvinhp]

- Fixed the form_tabbing to use the correct buttons names. Closes
  http://dev.plone.org/plone/ticket/7559
  [lucie, calvinhp]

- Fixed the full_review_list select all link to only select the items shown
  and not all of the items at the portal root. This closes:
  http://dev.plone.org/plone/ticket/6991
  [garbas, calvinhp]


3.1.7 - November 5, 2008
------------------------

- Updated the PloneTool normalization tests to match plone.i18n policies.
  [hannosch]


3.1.6 - October 7, 2008
-----------------------

- PloneTool.reindexOnReorder: Don't fail if the catalog contains stale
  entries.
  [stefan]

- Fixed the silent fail of the group membership from a user via the
  prefs_user_memberships form. This closes 
  http://dev.plone.org/plone/ticket/8468
  [garbas, calvinhp]

- Fixed the migration from 3.0.1 to 3.0.2 to now put back the actionicons
  for the languages control panel. 
  This closes http://dev.plone.org/plone/ticket/7901
  [KurtB, calvinhp]

- Changed isIDAutoGenerated to work with types that have .'s in them in the
  case that namespaces are included in the type's portal_type. For example:
  collective.types.ExternalSearch (to pick one from the collective). This
  closes http://dev.plone.org/plone/ticket/8480.
  [pbugni,dunlapm]

- Changed prefs_group_members.pt search table to behave coherently with
  prefs_users_overview.pt, including the results header only when 
  there are results to show.
  [igbun]

- By default, keep the styling when managing portlets separate from the