@@ -1,0 +1,79 @@
+<?xml version="1.0"?>
+<tool-setup>
+ <required tool_id="MailHost"
+           class="Products.SecureMailHost.SecureMailHost.SecureMailHost"/>
+ <required tool_id="caching_policy_manager"
+           class="Products.CMFCore.CachingPolicyManager.CachingPolicyManager"/>
+ <required tool_id="content_type_registry"
+           class="Products.CMFCore.ContentTypeRegistry.ContentTypeRegistry"/>
+ <required tool_id="error_log"
+           class="Products.SiteErrorLog.SiteErrorLog.SiteErrorLog"/>
+ <required tool_id="plone_utils"
+           class="Products.CMFPlone.PloneTool.PloneTool"/>
+ <required tool_id="portal_actionicons"
+           class="Products.CMFPlone.ActionIconsTool.ActionIconsTool"/>
+ <required tool_id="portal_actions"
+           class="Products.CMFPlone.ActionsTool.ActionsTool"/>
+ <required tool_id="portal_atct"
+           class="Products.ATContentTypes.tool.atct.ATCTTool"/>
+ <required tool_id="portal_calendar"
+           class="Products.CMFPlone.CalendarTool.CalendarTool"/>
+ <required tool_id="portal_catalog"
+           class="Products.CMFPlone.CatalogTool.CatalogTool"/>
+ <required tool_id="portal_controlpanel"
+           class="Products.CMFPlone.PloneControlPanel.PloneControlPanel"/>
+ <required tool_id="portal_css"
+           class="Products.ResourceRegistries.tools.CSSRegistry.CSSRegistryTool"/>
+ <required tool_id="portal_discussion"
+           class="Products.CMFPlone.DiscussionTool.DiscussionTool"/>
+ <required tool_id="portal_factory"
+           class="Products.CMFPlone.FactoryTool.FactoryTool"/>
+ <required tool_id="portal_groupdata"
+           class="Products.PlonePAS.tools.groupdata.GroupDataTool"/>
+ <required tool_id="portal_groups"
+           class="Products.PlonePAS.tools.groups.GroupsTool"/>
+ <required tool_id="portal_interface"
+           class="Products.CMFPlone.InterfaceTool.InterfaceTool"/>
+ <required tool_id="portal_javascripts"
+           class="Products.ResourceRegistries.tools.JSRegistry.JSRegistryTool"/>
+ <required tool_id="portal_kss"
+           class="Products.ResourceRegistries.tools.KSSRegistry.KSSRegistryTool"/>
+ <required tool_id="portal_memberdata"
+           class="Products.PlonePAS.tools.memberdata.MemberDataTool"/>
+ <required tool_id="portal_membership"
+           class="Products.PlonePAS.tools.membership.MembershipTool"/>
+ <required tool_id="portal_metadata"
+           class="Products.CMFPlone.MetadataTool.MetadataTool"/>
+ <required tool_id="portal_migration"
+           class="Products.CMFPlone.MigrationTool.MigrationTool"/>
+ <required tool_id="portal_password_reset"
+           class="Products.PasswordResetTool.PasswordResetTool.PasswordResetTool"/>
+ <required tool_id="portal_properties"
+           class="Products.CMFPlone.PropertiesTool.PropertiesTool"/>
+ <required tool_id="portal_quickinstaller"
+           class="Products.CMFPlone.QuickInstallerTool.QuickInstallerTool"/>
+ <required tool_id="portal_registration"
+           class="Products.CMFPlone.RegistrationTool.RegistrationTool"/>
+ <required tool_id="portal_skins"
+           class="Products.CMFPlone.SkinsTool.SkinsTool"/>
+ <required tool_id="portal_syndication"
+           class="Products.CMFPlone.SyndicationTool.SyndicationTool"/>
+ <required tool_id="portal_types"
+           class="Products.CMFPlone.TypesTool.TypesTool"/>
+ <required tool_id="portal_uidannotation"
+           class="Products.CMFUid.UniqueIdAnnotationTool.UniqueIdAnnotationTool"/>
+ <required tool_id="portal_uidgenerator"
+           class="Products.CMFUid.UniqueIdGeneratorTool.UniqueIdGeneratorTool"/>
+ <required tool_id="portal_uidhandler"
+           class="Products.CMFUid.UniqueIdHandlerTool.UniqueIdHandlerTool"/>
+ <required tool_id="portal_undo"
+           class="Products.CMFPlone.UndoTool.UndoTool"/>
+ <required tool_id="portal_url"
+           class="Products.CMFPlone.URLTool.URLTool"/>
+ <required tool_id="portal_view_customizations"
+           class="plone.app.customerize.tool.ViewTemplateContainer"/>
+ <required tool_id="portal_workflow"
+           class="Products.CMFPlone.WorkflowTool.WorkflowTool"/>
+ <required tool_id="translation_service"
+           class="Products.CMFPlone.TranslationServiceTool.TranslationServiceTool"/>
+</tool-setup>
